--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: modularapparchitecture
 description: "Modular App Architecture Kit 2026 — Feature-first Flutter starter with GetX, clean architecture, Firebase helpers, and CLI generators."
-repository: https://github.com/moazzamshah21/Modular-App-Architecture-Kit
+repository: https://github.com/moazzamshah21/Modular-App-Architecture-Kit.git
 homepage: https://github.com/moazzamshah21/Modular-App-Architecture-Kit
 documentation: https://github.com/moazzamshah21/Modular-App-Architecture-Kit#readme
 topics:
